Adding css base

--- a/index.html
+++ b/index.html
@@ -5,9 +5,39 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="stylesheet" href="./src/home.css">
+    <link rel="stylesheet" href="./src/nav.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
   </head>
   <body>
     <div id="root"></div>
+
+    <section id="nav">
+      <img id="cream" src="./src/img/Cloud-t.png" alt="Cloud">
+      <nav>
+        <ul>
+          <li><a href="#"><img src="./src/img/Home.png" alt="Purple ink well that says home button"></a></li>
+          <li><a href="#"><img src="./src/img/Info.png" alt="Red ink well that says info button"></a></li>
+          <li><a href="#"><img src="./src/img/Profile.png" alt="Blue ink well that says Profile button"></a></li>
+          <li><a href="#"><img src="./src/img/log-sign.png" alt="Green ink well that says Login and Sign-up"></a></li>
+        </ul>
+      </nav>
+    </section>
+
+    <section id="coffee">
+      <h2>Welcome to Build a Book</h2>
+      <p>
+        A website designed to provide an essential tool for Writers to keep their stories and characters organized
+      </p>
+    </section>
+
+    <section id="sugar">
+      <img src="./src/img/Book.png" alt="A Brown Book with mutliple tab labels">
+    </section>
+
+    <section id="cloud">
+      <p>Mew</p>
+    </section>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
