--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <link rel="stylesheet" href="./src/home.css">
-    <link rel="stylesheet" href="./src/nav.css">
+    <link rel="stylesheet" href="./client/src/nav.css">
+    <link rel="stylesheet" href="./client/src/home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
   </head>
   <body>
     <div id="root"></div>
 
     <section id="nav">
-      <img id="cream" src="./src/img/Cloud-t.png" alt="Cloud">
+      <img id="cream" src="./client/src/img/Cloud-t.png" alt="Cloud">
       <nav>
         <ul>
-          <li><a href="#"><img src="./src/img/Home.png" alt="Purple ink well that says home button"></a></li>
-          <li><a href="#"><img src="./src/img/Info.png" alt="Red ink well that says info button"></a></li>
-          <li><a href="#"><img src="./src/img/Profile.png" alt="Blue ink well that says Profile button"></a></li>
-          <li><a href="#"><img src="./src/img/log-sign.png" alt="Green ink well that says Login and Sign-up"></a></li>
+          <li><a href="#"><img src="./client/src/img/Home.png" alt="Purple ink well that says home button"></a></li>
+          <li><a href="#"><img src="./client/src/img/Info.png" alt="Red ink well that says info button"></a></li>
+          <li><a href="#"><img src="./client/src/img/Profile.png" alt="Blue ink well that says Profile button"></a></li>
+          <li><a href="#"><img src="./client/src/img/log-sign.png" alt="Green ink well that says Login and Sign-up"></a></li>
         </ul>
       </nav>
     </section>
@@ -32,7 +32,7 @@
     </section>
 
     <section id="sugar">
-      <img src="./src/img/Book.png" alt="A Brown Book with mutliple tab labels">
+      <img src="./client/src/img/Book.png" alt="A Brown Book with mutliple tab labels">
     </section>
 
     <section id="cloud">
