--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
     <section id="cloud">
       <p>Mew</p>
     </section>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./client/src/main.jsx"></script>
   </body>
 </html>
