--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <img id="cream" src="./client/src/img/Cloud-t.png" alt="Cloud">
       <nav>
         <ul>
-          <li><a href="#"><img src="./client/src/img/Home.png" alt="Purple ink well that says home button"></a></li>
-          <li><a href="#"><img src="./client/src/img/Info.png" alt="Red ink well that says info button"></a></li>
-          <li><a href="#"><img src="./client/src/img/Profile.png" alt="Blue ink well that says Profile button"></a></li>
-          <li><a href="#"><img src="./client/src/img/log-sign.png" alt="Green ink well that says Login and Sign-up"></a></li>
+          <li><a href="./client/src/home.css"><img src="./client/src/img/Home.png" alt="Purple ink well that says home button"></a></li>
+          <li><a href="./client/src/nav.css"><img src="./client/src/img/Info.png" alt="Red ink well that says info button"></a></li>
+          <li><a href="./client/src/profile.css"><img src="./client/src/img/Profile.png" alt="Blue ink well that says Profile button"></a></li>
+          <li><a href="./Server/layouts/login.handlebars"><img src="./client/src/img/log-sign.png" alt="Green ink well that says Login and Sign-up"></a></li>
         </ul>
       </nav>
     </section>
