--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./client/public/vite.svg" />
-    <link rel="icon" type="image/svg+xml" href="/client/public/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <link rel="stylesheet" href="/client/src/nav.css">
-    <link rel="stylesheet" href="./client/src/home.css">
+    <link rel="stylesheet" href="./nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
   </head>
   <body>
@@ -34,10 +31,6 @@
 
     <section id="sugar">
       <img src="./client/src/img/Book.png" alt="A Brown Book with mutliple tab labels">
-    </section>
-
-    <section id="cloud">
-      <p>Mew</p>
     </section>
     <script type="module" src="./client/src/main.jsx"></script>
   </body>
