--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vite + React</title>
     <link rel="stylesheet" href="./nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
+    <title>B.A.B</title>
   </head>
   <body>
     <div id="root"></div>
